--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,24 @@ services:
     environment:
       - POSTGRES_USER=test
       - POSTGRES_PASSWORD=root
-    ports:
-      - 5432:5432
+    expose:
+      - 5432
   server:
     build: ./server
-    ports:
-      - 9000:9000
+    expose:
+      - 9000
     depends_on:
       - postgres
     links:
       - postgres:postgres
+  nginx:
+    build: ./nginx
+    ports:
+      - 80:80
+      - 8080:8080
+      - 443:443
+    
+    links:
+      - server
+    depends_on:
+      - server
